Assignment 30 completed, CSS and HTML

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Bloccit</h1>
-<p>Created by: LA</p>
+<p>Created by: LA</p> 
+<%= link_to "Tweet me", "https://www.twitter.com/leaartis", class: "social-btn" %>
