--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,32 +8,11 @@
  <div class="row">
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
- 
-     <% @topic.posts.each do |post| %>
-       <div class="media">
-         <div class="media-body">
-           <h4 class="media-heading">
-             <%= link_to post.title, topic_post_path(@topic, post) %>
-           </h4>
-            <small>
-             submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-             <%= post.comments.count %> Comments
-           </small>
-         </div>
-          <% end %>
-       </div>
-
-      <% @topic.sponsored_posts.each do |sponsored_post| %>
-         <div class="media">
-           <div class="media-body">
-             <h4 class="media-heading">
-               <%= link_to sponsored_post.title, topic_sponsored_post_path(@topic, sponsored_post) %>
-             </h4>
-            
-          </div>
-      </div>
-       
-     <% end %>
+     
+     <div>
+     <%= render @topic.posts %>
+     </div>
+      
    </div>
    <% if current_user %>
    <div class="col-md-4">
