--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <h1>
    <%= @post.title %> <br>
+   <%= render partial: "ratings/display", locals: { ratings: @topic.ratings } %>
    <small>
      submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
    </small>
