Edits to assignment 42 so far

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @topic.name %></h1> 
 <div>
-<%= render partial: "ratings/display", locals: { ratings: @topic.ratings } %>
+<%= render partial: "ratings/display", locals: { rating: @topic.rating } %>
 </div>
  
  <% if user_is_authorized_for_topics? %>
