--- a/app/views/ratings/_display.html.erb
+++ b/app/views/ratings/_display.html.erb
@@ -1,3 +1,3 @@
- <% if ratings %>
-   <%= link_to ratings.severity, "", class: "btn btn-info" %>
+ <% if rating %>
+   <%= link_to rating.severity, "", class: "btn btn-info" %>
  <% end %>
