--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -25,7 +25,7 @@
        </div>
        
        <div class="form-group">
-          <%= render partial: "ratings/form", locals: { f: f, ratings: @topic.ratings } %>
+          <%= render partial: "ratings/form", locals: { f: f, rating: @topic.rating } %>
        </div>
 
         <div class="form-group">
