--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
        <div class="media-body">
          <h2 class="media-heading"><%= @user.name %></h2>
          <small>
-           <%= pluralize(@user.posts.count, 'post') %>,
-           <%= pluralize(@user.comments.count, 'comment') %>
+           <%= count_if_any(:posts) %>,
+           <%= count_if_any(:comments) %>
          </small>
        </div>
      </div>
@@ -24,3 +24,11 @@
  
  <h2>Comments</h2>
  <%= render @user.comments %>
+
+ <h2>Favorites</h2>
+  <% @user.favorites.each do |favorite| %>
+    <%= image_tag favorite.post.user.avatar_url(24) %>
+    <%= favorite.post.title %>
+    <%= pluralize(favorite.post.points, 'point') %>
+    <br/>
+  <% end %>
